src/objects/MMD_Con_Client__c.object
<CustomObject>
    <description>(MBI) - MMD - Consultant Clients</description>
    <fields>
        <fullName>CATCODE__c</fullName>
        <label>Category Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>CASE( CATCODE__c ,
&quot;05&quot;,&quot;Corporations&quot;,
&quot;10&quot;,&quot;Unions&quot;,
&quot;15&quot;,&quot;Governments&quot;,
&quot;20&quot;,&quot;Endowments&quot;,
&quot;25&quot;,&quot;Private Foundations&quot;,
&quot;28&quot;,&quot;All Other Tax-Exempt&quot;,
&quot;30&quot;,&quot;Health Service - for profit&quot;,
&quot;35&quot;,&quot;Reserve Banks&quot;,
&quot;38&quot;,&quot;Health Service - nonprofit&quot;,
&quot;66&quot;,&quot;Sovereign Wealth Funds&quot;,
CATCODE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>Firm MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Firm_Profile__c</fullName>
        <label>MMD Firm Profile</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Clients</relationshipLabel>
        <relationshipName>MMD_Con_Clients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PSNAME__c</fullName>
        <label>Plan Sponsor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Sponsor_MMD_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Sponsor MMD ID</label>
        <referenceTo>MMCOMP__c</referenceTo>
        <relationshipLabel>Consultants providing Services</relationshipLabel>
        <relationshipName>R00N30000003AW4ZEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SORTNAME__c</fullName>
        <label>Plan Sponsor Sort Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>MMD Con Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Con Clients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>